--- a/index3.html
+++ b/index3.html
@@ -1,67 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>SVG</title>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script src="js/jquery.vide.min.js"></script>
-	<script src="js/jquery.vide.js"></script>
-	<script src="js/script.js"></script>
-    <script src="js/isotope.js"></script>
-    <script src="js/isotope.pkgd.min.js"></script>
-
+	<title>kimandy.net</title>
 </head>
+
 <link rel="stylesheet" type="text/css" href="dist/style.css">
 <link href="css/bootstrap.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="dist/isotope.css">
 <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700,700italic' rel='stylesheet' type='text/css'>
+
 <body>
- <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid" style="margin-right:0px; margin-left:0px;">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <p class="location">Washington&nbsp;&nbsp;|&nbsp;&nbsp;DC&nbsp;&nbsp;|&nbsp;&nbsp;kimandy703@gmail.com</p>
-            </div>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid" style="margin-right:0px; margin-left:0px;">
+      <div class="navbar-header page-scroll">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <p class="location">Washington&nbsp;&nbsp;|&nbsp;&nbsp;DC&nbsp;&nbsp;|&nbsp;&nbsp;kimandy703@gmail.com</p>
+      </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav menus">
+          <li class="hidden">
+            <a href="#page-top"></a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#aboutme">Top</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#portfolio">Projects</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav menus">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#aboutme">Top</a>
-                    </li>
-                     <li>
-                        <a class="page-scroll" href="#portfolio">Projects</a>
-                    </li>
- 
-                    <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-
-<!--     <div class="bgfilter">
-	</div> -->
-
+  <div class="bgfilter">
+  </div>
 
 	<div class="videobg" data-vide-bg="mp4: bgvid.mp4" data-vide-options="posterType: jpg, loop: true, muted: true, position: 0% 0%">
 	</div>
-
-
-
 
 	<div class="container">
 		<div class="row">
@@ -69,22 +52,22 @@
 				<img src="img/ak_logo.png">
 			</div>
 			<div class="col-lg-8 intro">
-                <div>
-    				<h1>ANDY KIM/</h1>
-    				<h1>WEB DESIGN</h1>
-    				<h3>Front-end Developer/Web &#38; Interactive Desinger</h3>
-                </div>
-                <div class="intro2">
-                    <h2>DEVELOP/DESIGN</h2>
-                    <h4><strong>HTML/CSS</strong></h4>
-                    <h4><strong>Javascript/Jquery</strong></h4>
-                    <h4><strong>Responsive</strong></h4>
-                    <h4><strong>WordPress</strong></h4>
-                    <h4><strong>Wireframe</strong></h4>
-                    <h4><strong>Adobe CC</strong></h4>
-                </div>
+        <div>
+    			<h1>ANDY KIM/</h1>
+    			<h1>WEB DESIGN</h1>
+    			<h3>Front-end Developer/Web &#38; Interactive Desinger</h3>
+        </div>
+        <div class="intro2">
+          <h2>DEVELOP/DESIGN</h2>
+          <h4><strong>HTML/CSS</strong></h4>
+          <h4><strong>Javascript/Jquery</strong></h4>
+          <h4><strong>Responsive</strong></h4>
+          <h4><strong>WordPress</strong></h4>
+          <h4><strong>Wireframe</strong></h4>
+          <h4><strong>Adobe CC</strong></h4>
+        </div>
 			</div>
-<!-- 			<div class="col-lg-8 intro2">
+<!-- 	<div class="col-lg-8 intro2">
 				<h2>DEVELOP/DESIGN</h2>
 				<h4><strong>HTML/CSS</strong></h4>
 				<h4><strong>Javascript/Jquery</strong></h4>
@@ -92,7 +75,6 @@
 				<h4><strong>WordPress</strong></h4>
 				<h4><strong>Wireframe</strong></h4>
 				<h4><strong>Adobe CC</strong></h4>
-
 			</div> -->
 		</div>
 	</div>
@@ -109,66 +91,72 @@
 	<div class="container projects">
 		<div class="row">
 			<div class="col-lg-12">
-                <h1>Isotope - filtering &amp; sorting</h1>
-                <h2>Filter</h2>
-                <div id="filters" class="button-group">  <button class="button is-checked" data-filter="*">show all</button>
-                  <button class="button" data-filter=".design">Design</button>
-                  <button class="button" data-filter=".web">Web</button>
-                  <button class="button" data-filter=".htmlemail">HTML Email</button>
-<!--                   <button class="button" data-filter=":not(.transition)">not transition</button>
-                  <button class="button" data-filter=".metal:not(.transition)">metal but not transition</button>
-                  <button class="button" data-filter="numberGreaterThan50">number > 50</button>
-                  <button class="button" data-filter="ium">name ends with &ndash;ium</button> -->
-                </div>
+        <h1>Isotope - filtering &amp; sorting</h1>
+        <h2>Filter</h2>
+        <div id="filters" class="button-group">  <button class="button is-checked" data-filter="*">show all</button>
+          <button class="button" data-filter=".design">Design</button>
+          <button class="button" data-filter=".web">Web</button>
+          <button class="button" data-filter=".htmlemail">HTML Email</button>
+  <!--              <button class="button" data-filter=":not(.transition)">not transition</button>
+          <button class="button" data-filter=".metal:not(.transition)">metal but not transition</button>
+          <button class="button" data-filter="numberGreaterThan50">number > 50</button>
+          <button class="button" data-filter="ium">name ends with &ndash;ium</button> -->
+        </div>
 
-<!--                 <h2>Sort</h2>
-                <div id="sorts" class="button-group">  <button class="button is-checked" data-sort-by="original-order">original order</button>
-                  <button class="button" data-sort-by="name">name</button>
-                  <button class="button" data-sort-by="symbol">symbol</button>
-                  <button class="button" data-sort-by="number">number</button>
-                  <button class="button" data-sort-by="weight">weight</button>
-                  <button class="button" data-sort-by="category">category</button>
-                </div>
- -->
-                <div class="isotope">
-                  <div class="element-item design " data-category="design">
-                    <a href="#">
-                        <img src="http://placekitten.com/g/200/300">
-                    </a>
-                  </div>
-                  <div class="element-item design " data-category="design">
-                    <a href="#">
-                        <img src="https://placeimg.com/200/300/any">
-                    </a>
-                  </div>
-                  <div class="element-item web " data-category="web">
-                    <a href="#">
-                        <img src="https://placeimg.com/200/250/any">
-                    </a>
-                  </div>
-                  <div class="element-item web " data-category="web">
-                    <a href="#">
-                        <img src="https://placeimg.com/200/250/any">
-                    </a>
-                  </div>
-                  <div class="element-item htmlemail " data-category="htmlemail">
-                    <a href="#">
-                        <img src="https://placeimg.com/200/200/any">
-                    </a>
-                  </div>
-                  <div class="element-item htmlemail " data-category="htmlemail">
-                    <a href="#">
-                        <img src="https://placeimg.com/200/200/any">
-                    </a>
-                  </div>
-                </div>
-
+  <!--            <h2>Sort</h2>
+          <div id="sorts" class="button-group">  <button class="button is-checked" data-sort-by="original-order">original order</button>
+          <button class="button" data-sort-by="name">name</button>
+          <button class="button" data-sort-by="symbol">symbol</button>
+          <button class="button" data-sort-by="number">number</button>
+          <button class="button" data-sort-by="weight">weight</button>
+          <button class="button" data-sort-by="category">category</button>
+        </div>
+  -->
+        <div class="isotope">
+          <div class="element-item design " data-category="design">
+            <a href="#">
+                <img src="http://placekitten.com/g/200/300">
+            </a>
+          </div>
+          <div class="element-item design " data-category="design">
+            <a href="#">
+                <img src="https://placeimg.com/200/300/any">
+            </a>
+          </div>
+          <div class="element-item web " data-category="web">
+            <a href="#">
+                <img src="https://placeimg.com/200/250/any">
+            </a>
+          </div>
+          <div class="element-item web " data-category="web">
+            <a href="#">
+                <img src="https://placeimg.com/200/250/any">
+            </a>
+          </div>
+          <div class="element-item htmlemail " data-category="htmlemail">
+            <a href="#">
+                <img src="https://placeimg.com/200/200/any">
+            </a>
+          </div>
+          <div class="element-item htmlemail " data-category="htmlemail">
+            <a href="#">
+                <img src="https://placeimg.com/200/200/any">
+            </a>
+          </div>
+        </div>
 			</div>
 		</div>
 	</div>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="js/jquery.vide.min.js"></script>
+  <script src="js/jquery.vide.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/isotope.js"></script>
+  <script src="js/isotope.pkgd.min.js"></script>
 
-</body>
+
+  </body>
 </html>
 
 
