--- a/index3.html
+++ b/index3.html
@@ -27,10 +27,10 @@
             <a href="#page-top"></a>
           </li>
           <li>
-            <a class="page-scroll" href="#aboutme">Top</a>
+            <a class="page-scroll" href="#page-top">Top</a>
           </li>
           <li>
-            <a class="page-scroll" href="#portfolio">Projects</a>
+            <a class="page-scroll" href="#projects">Projects</a>
           </li>
           <li>
             <a class="page-scroll" href="#contact">Contact</a>
@@ -45,54 +45,54 @@
 
 	<div class="videobg" data-vide-bg="mp4: bgvid.mp4" data-vide-options="posterType: jpg, loop: true, muted: true, position: 0% 0%">
 	</div>
+  <section id="page-top">
+  	<div class="container">
+  		<div class="row">
+  			<div class="col-lg-4 greeting">
+  				<img src="img/ak_logo.png">
+  			</div>
+  			<div class="col-lg-8 intro">
+          <div>
+      			<h1>ANDY KIM/</h1>
+      			<h1>WEB DESIGN</h1>
+      			<h3>Front-end Developer/Web &#38; Interactive Desinger</h3>
+          </div>
+          <div class="intro2">
+            <h2>DEVELOP/DESIGN</h2>
+            <h4><strong>HTML/CSS</strong></h4>
+            <h4><strong>Javascript/Jquery</strong></h4>
+            <h4><strong>Responsive</strong></h4>
+            <h4><strong>WordPress</strong></h4>
+            <h4><strong>Wireframe</strong></h4>
+            <h4><strong>Adobe CC</strong></h4>
+          </div>
+  			</div>
+  <!-- 	<div class="col-lg-8 intro2">
+  				<h2>DEVELOP/DESIGN</h2>
+  				<h4><strong>HTML/CSS</strong></h4>
+  				<h4><strong>Javascript/Jquery</strong></h4>
+  				<h4><strong>Responsive</strong></h4>
+  				<h4><strong>WordPress</strong></h4>
+  				<h4><strong>Wireframe</strong></h4>
+  				<h4><strong>Adobe CC</strong></h4>
+  			</div> -->
+  		</div>
+  	</div>
+  </section>
 
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-4 greeting">
-				<img src="img/ak_logo.png">
-			</div>
-			<div class="col-lg-8 intro">
-        <div>
-    			<h1>ANDY KIM/</h1>
-    			<h1>WEB DESIGN</h1>
-    			<h3>Front-end Developer/Web &#38; Interactive Desinger</h3>
-        </div>
-        <div class="intro2">
-          <h2>DEVELOP/DESIGN</h2>
-          <h4><strong>HTML/CSS</strong></h4>
-          <h4><strong>Javascript/Jquery</strong></h4>
-          <h4><strong>Responsive</strong></h4>
-          <h4><strong>WordPress</strong></h4>
-          <h4><strong>Wireframe</strong></h4>
-          <h4><strong>Adobe CC</strong></h4>
-        </div>
-			</div>
-<!-- 	<div class="col-lg-8 intro2">
-				<h2>DEVELOP/DESIGN</h2>
-				<h4><strong>HTML/CSS</strong></h4>
-				<h4><strong>Javascript/Jquery</strong></h4>
-				<h4><strong>Responsive</strong></h4>
-				<h4><strong>WordPress</strong></h4>
-				<h4><strong>Wireframe</strong></h4>
-				<h4><strong>Adobe CC</strong></h4>
-			</div> -->
-		</div>
+<!-- 	<div class="bgfilterlow">
 	</div>
-
-	<div class="bgfilterlow">
-	</div>
-
+ -->
 <!-- 	<div class="lowerbg">
 		<img src="img/lowerbg.png">
 	</div>
  -->
 
 <!-- ISOTOPE -->
-	<div class="container projects">
+	<div class="container" id="projects">
 		<div class="row">
-			<div class="col-lg-12">
-        <h1>Isotope - filtering &amp; sorting</h1>
-        <h2>Filter</h2>
+			<div class="col-lg-12 col-centered">
+        <h1>PROJECTS</h1>
         <div id="filters" class="button-group">  <button class="button is-checked" data-filter="*">show all</button>
           <button class="button" data-filter=".design">Design</button>
           <button class="button" data-filter=".web">Web</button>
@@ -123,6 +123,11 @@
                 <img src="https://placeimg.com/200/300/any">
             </a>
           </div>
+          <div class="element-item design " data-category="design">
+            <a href="#">
+                <img src="https://placeimg.com/200/300/any">
+            </a>
+          </div>
           <div class="element-item web " data-category="web">
             <a href="#">
                 <img src="https://placeimg.com/200/250/any">
@@ -131,6 +136,11 @@
           <div class="element-item web " data-category="web">
             <a href="#">
                 <img src="https://placeimg.com/200/250/any">
+            </a>
+          </div>
+          <div class="element-item htmlemail " data-category="htmlemail">
+            <a href="#">
+                <img src="https://placeimg.com/200/200/any">
             </a>
           </div>
           <div class="element-item htmlemail " data-category="htmlemail">
@@ -149,11 +159,15 @@
 	</div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="js/jquery.vide.min.js"></script>
   <script src="js/jquery.vide.js"></script>
   <script src="js/script.js"></script>
   <script src="js/isotope.js"></script>
   <script src="js/isotope.pkgd.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+  <script src="js/classie.js"></script>
+  <script src="js/cbpAnimatedHeader.js"></script>
 
 
   </body>
