--- a/pages/html1.html
+++ b/pages/html1.html
@@ -43,8 +43,9 @@
   <section id="page-top">
   	<div class="container pages">
   		<div class="row">
-
-  			<div class="col-lg-12 pages">
+  			<div class="col-lg-4">
+  			</div>
+  			<div class="col-lg-8 contents">
 	            <div>
 	      			<h1>HTML Email</h1>
 	      			<h1>Client Name</h1>
