--- a/Clean2/index.html
+++ b/Clean2/index.html
@@ -146,56 +146,34 @@
 <!-- Services end -->
 <section id="portfolio" class="pfblock">
 	<div class="container">
-		<h1>Isotope - filtering</h1>
+		<h1>Portfolio</h1>
 		<div class="button-group filters-button-group">
 		  <button class="button is-checked" data-filter="*">SHOW ALL</button>
 		  <button class="button" data-filter=".design">DESIGN</button>
 		  <button class="button" data-filter=".website">WEBSITES</button>
-		  <button class="button" data-filter=".webapp">WEBAPPS</button>
 		  <button class="button" data-filter=".htmlemail">HTML EMAIL</button>
 		</div>
 		<div class="grid">
 		  <div class="element-item design " data-category="transition">
-		    <h3 class="name">Mercury</h3>
-		    <p class="symbol">Hg</p>
-		    <p class="number">80</p>
-		    <p class="weight">200.59</p>
+		    <img src="assets/images/dwellwell.png">
 		  </div>
 		  <div class="element-item design " data-category="metalloid">
-		    <h3 class="name">Tellurium</h3>
-		    <p class="symbol">Te</p>
-		    <p class="number">52</p>
-		    <p class="weight">127.6</p>
+		    <img src="assets/images/weather_alarm.png">
+		  </div>
+		  <div class="element-item design" data-category="post-transition">
+		    <img src="assets/images/prvven.png">
 		  </div>
 		  <div class="element-item website" data-category="post-transition">
-		    <h3 class="name">Bismuth</h3>
-		    <p class="symbol">Bi</p>
-		    <p class="number">83</p>
-		    <p class="weight">208.980</p>
+		    <img src="assets/images/petstargram.png">
 		  </div>
-		  <div class="element-item website" data-category="post-transition">
-		    <h3 class="name">Lead</h3>
-		    <p class="symbol">Pb</p>
-		    <p class="number">82</p>
-		    <p class="weight">207.2</p>
+		  <div class="element-item website" data-category="transition">
+		    <img src="assets/images/travelion.png">
 		  </div>
-		  <div class="element-item webapp" data-category="transition">
-		    <h3 class="name">Gold</h3>
-		    <p class="symbol">Au</p>
-		    <p class="number">79</p>
-		    <p class="weight">196.967</p>
+		  <div class="element-item website" data-category="alkali">
+		    <img src="assets/images/cs.png">
 		  </div>
-		  <div class="element-item webapp" data-category="alkali">
-		    <h3 class="name">Potassium</h3>
-		    <p class="symbol">K</p>
-		    <p class="number">19</p>
-		    <p class="weight">39.0983</p>
-		  </div>
-		  <div class="element-item htmlemail" data-category="alkali">
-		    <h3 class="name">Sodium</h3>
-		    <p class="symbol">Na</p>
-		    <p class="number">11</p>
-		    <p class="weight">22.99</p>
+		  <div class="element-item website" data-category="alkali">
+		    <img src="assets/images/dearabby.png">
 		  </div>
 		  <div class="element-item htmlemail" data-category="transition">
 		    <h3 class="name">Cadmium</h3>
