--- a/producer.html
+++ b/producer.html
@@ -61,9 +61,9 @@
 	<section class="cd-single-item">
 		<div class="cd-slider-wrapper">
 			<ul class="cd-slider">
-				<li class="selected"><img src="img/img-1.jpg" alt="Product Image 1"></li>
-				<li><img src="img/img-2.jpg" alt="Product Image 1"></li>
-				<li><img src="img/img-3.jpg" alt="Product Image 2"></li>
+				<li class="selected"><img src="img/amway_1.jpg" alt="Product Image 1"></li>
+				<li><img src="img/amway_2.jpg" alt="Product Image 1"></li>
+				<li><img src="img/amway_3.jpg" alt="Product Image 2"></li>
 			</ul> <!-- cd-slider -->
 			<ul class="cd-slider-navigation">
 				<li><a href="#0" class="cd-prev inactive">Next</a></li>
@@ -73,7 +73,7 @@
 		</div> <!-- cd-slider-wrapper -->
 		<div class="cd-item-info">
 			<h2>Global Network Marketing Company Seminar and Gala Dinner</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, omnis illo iste ratione.</p>
+			<p>Event Producer, Event Manager, Stage Design, Graphice Designe</p>
 			<!-- <button class="add-to-cart">Add to cart</button>	 -->					
 		</div> <!-- cd-item-info -->
 	</section> <!-- cd-single-item -->
@@ -81,9 +81,9 @@
 	<section class="cd-single-item">
 		<div class="cd-slider-wrapper">
 			<ul class="cd-slider">
-				<li class="selected"><img src="img/img-1.jpg" alt="Product Image 1"></li>
-				<li><img src="img/img-2.jpg" alt="Product Image 1"></li>
-				<li><img src="img/img-3.jpg" alt="Product Image 2"></li>
+				<li class="selected"><img src="img/kwn_1.jpg" alt="Product Image 1"></li>
+				<li><img src="img/kwn_2.jpg" alt="Product Image 1"></li>
+				<li><img src="img/kwn_4.jpg" alt="Product Image 2"></li>
 			</ul> <!-- cd-slider -->
 			<ul class="cd-slider-navigation">
 				<li><a href="#0" class="cd-prev inactive">Next</a></li>
@@ -93,7 +93,7 @@
 		</div> <!-- cd-slider-wrapper -->
 		<div class="cd-item-info">
 			<h2>Panasonic International Kid Witness News Global Awards Ceremony</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, omnis illo iste ratione.</p>
+			<p>Associate Producer, Event Manager, Graphic Design, Presentation Design, Video Design</p>
 			<!-- <button class="add-to-cart">Add to cart</button>	 -->					
 		</div> <!-- cd-item-info -->
 	</section> <!-- cd-single-item -->
@@ -101,9 +101,9 @@
 	<section class="cd-single-item">
 		<div class="cd-slider-wrapper">
 			<ul class="cd-slider">
-				<li class="selected"><img src="img/img-1.jpg" alt="Product Image 1"></li>
-				<li><img src="img/img-2.jpg" alt="Product Image 1"></li>
-				<li><img src="img/img-3.jpg" alt="Product Image 2"></li>
+				<li class="selected"><img src="img/hp_1.jpg" alt="Product Image 1"></li>
+				<li><img src="img/hp_2.jpg" alt="Product Image 1"></li>
+				<li><img src="img/hp_3.jpg" alt="Product Image 2"></li>
 			</ul> <!-- cd-slider -->
 			<ul class="cd-slider-navigation">
 				<li><a href="#0" class="cd-prev inactive">Next</a></li>
@@ -113,7 +113,7 @@
 		</div> <!-- cd-slider-wrapper -->
 		<div class="cd-item-info">
 			<h2>Product Launch for Hewlett Packard in Tokyo</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, omnis illo iste ratione.</p>
+			<p>Graphic Design</p>
 			<!-- <button class="add-to-cart">Add to cart</button> -->						
 		</div> <!-- cd-item-info -->
 	</section> <!-- cd-single-item -->
@@ -121,9 +121,9 @@
 	<section class="cd-single-item">
 		<div class="cd-slider-wrapper">
 			<ul class="cd-slider">
-				<li class="selected"><img src="img/img-1.jpg" alt="Product Image 1"></li>
-				<li><img src="img/img-2.jpg" alt="Product Image 1"></li>
-				<li><img src="img/img-3.jpg" alt="Product Image 2"></li>
+				<li class="selected"><img src="img/event_1.jpeg" alt="Product Image 1"></li>
+				<li><img src="img/event_2.jpeg" alt="Product Image 1"></li>
+				<li><img src="img/event_3.jpeg" alt="Product Image 2"></li>
 			</ul> <!-- cd-slider -->
 			<ul class="cd-slider-navigation">
 				<li><a href="#0" class="cd-prev inactive">Next</a></li>
@@ -133,7 +133,7 @@
 		</div> <!-- cd-slider-wrapper -->
 		<div class="cd-item-info">
 			<h2>Charity Event to Provide Tsunami Relief in Japan</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, omnis illo iste ratione.</p>
+			<p>Graphic Design, Operations</p>
 			<!-- <button class="add-to-cart">Add to cart</button>	 -->					
 		</div> <!-- cd-item-info -->
 	</section> <!-- cd-single-item -->
