--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
 <!-- Home start -->
 	<section id="home" class="pfblock-image screen-height">
-        <div class="home-overlay"></div>
+        <div ></div>
 		<div class="intro">
 			<div class="start">ANDY KIM</div>
 			<h1>Web Design</h1>
-			<div class="start">Web Design&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;UX Design&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Social Network Design</div>
+			<div class="start">Web Design&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Visual Design&nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp;Digital Design</div>
 		</div>
         <a href="#services">
 		<div class="scroll-down">
@@ -63,7 +63,7 @@
 						<li><a href="#home">Home</a></li>
 						<li><a href="#services">About</a></li>
                         <li><a href="#portfolio">Works</a></li>
-                        <li><a href="index_1.0.html">Previous Version</a></li>
+                        <!-- <li><a href="index_1.0.html">Previous Version</a></li> -->
 					</ul>
 				</div>
 			</div>
@@ -173,12 +173,12 @@
 		    <a href="http://petstargram.herokuapp.com" target="_blank">
 		      <img src="assets/images/petstargram.png">
 		    </a>
-		  </div>
-		  <div class="element-item website" >
-		  	<a href="http://travelion.herokuapp.com/" target="_blank">
-		    	<img src="assets/images/travelion.png">
-		    </a>
 		  </div> -->
+		  <div class="element-item website" >
+		  	<a href="http://jedimuzik.com/" target="_blank">
+		    	<img src="assets/images/jedi.png">
+		    </a>
+		  </div>
 		  <div class="element-item website">
 		    <a href="http://reportingonsuicide.org/" target="_blank">
 		      <img src="assets/images/ros.png">
@@ -199,11 +199,11 @@
 		      <img src="assets/images/nagb_history.png">
 		    </a>  
 		  </div>
-		  <div class="element-item htmlemail">
+<!-- 		  <div class="element-item htmlemail">
 		    <a href="portfolio/reingold_webinar.html" target="_blank">
 		      <img src="assets/images/webinar.png">
 		    </a>  
-		  </div>
+		  </div> -->
 		  <div class="element-item htmlemail" >
 		    <a href="portfolio/mfan.html" target="_blank">
 		      <img src="assets/images/mfan.png">
